since the mobile css now stretches images, the presentational images look bad. Remove them in mobile and fix a few other presentations.

--- a/www/css/small_devices.css
+++ b/www/css/small_devices.css
@@ -88,6 +88,11 @@
 ***************************************************
 */
 #filters{display:none;}
+.intro img {display:none;}
+.intro .recordDetails{
+    margin-left:0;
+    float:none;
+}
 #maincontent .two_col {width:46%;}
 #maincontent .three_col{width:72%;}
 #maincontent h6.recordDetails {
